--- a/slider/index.html
+++ b/slider/index.html
@@ -44,17 +44,102 @@ body {
 
 
 .slide:first-child {
-  background: url("1.png") no-repeat
+  background: url("1.jpg") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(2) {
-  background: url("2.png") no-repeat
+  background: url("2.jpg") no-repeat
     center top/cover;
 }
 
 .slide:nth-child(3) {
-  background: url("3.png") no-repeat
+  background: url("3.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(4) {
+  background: url("4.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(5) {
+  background: url("5.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(6) {
+  background: url("6.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(7) {
+  background: url("7.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(8) {
+  background: url("8.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(9) {
+  background: url("9.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(10) {
+  background: url("10.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(11) {
+  background: url("11.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(12) {
+  background: url("12.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(13) {
+  background: url("13.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(14) {
+  background: url("14.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(15) {
+  background: url("15.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(16) {
+  background: url("16.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(17) {
+  background: url("17.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(18) {
+  background: url("18.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(19) {
+  background: url("19.jpg") no-repeat
+    center top/cover;
+}
+
+.slide:nth-child(20) {
+  background: url("20.jpg") no-repeat
     center top/cover;
 }
 
@@ -112,6 +197,24 @@ body {
     <div class="slide current"></div>
     <div class="slide"></div>
     <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+    <div class="slide"></div>
+
 
   </div>
   <div class="buttons">
@@ -127,47 +230,39 @@ body {
     const intervalTime = 5000;
     let slideInterval;
 
+    const shuffleSlides = () => {
+      const slidesArray = Array.from(slides);
+      slidesArray.sort(() => Math.random() - 0.5);
+      slides.forEach(slide => {
+        slide.classList.remove("current");
+      });
+      slidesArray[0].classList.add("current");
+    };
+
     const nextSlide = () => {
-      const current = document.querySelector(".current");
-      current.classList.remove("current");
-      if (current.nextElementSibling) {
-        current.nextElementSibling.classList.add("current");
-      } else {
-        slides[0].classList.add("current");
+      shuffleSlides();
+      if (auto) {
+        clearInterval(slideInterval);
+        slideInterval = setInterval(nextSlide, intervalTime);
       }
     };
 
     const prevSlide = () => {
-      const current = document.querySelector(".current");
-      current.classList.remove("current");
-      if (current.previousElementSibling) {
-        current.previousElementSibling.classList.add("current");
-      } else {
-        slides[slides.length - 1].classList.add("current");
+      shuffleSlides();
+      if (auto) {
+        clearInterval(slideInterval);
+        slideInterval = setInterval(nextSlide, intervalTime);
       }
     };
 
-    nextButton.addEventListener("click", () => {
-      nextSlide();
-      if (auto) {
-        clearInterval(slideInterval);
-        slideInterval = setInterval(nextSlide, intervalTime);
-      }
-    });
-    prevButton.addEventListener("click", () => {
-      prevSlide();
-      if (auto) {
-        clearInterval(slideInterval);
-        slideInterval = setInterval(nextSlide, intervalTime);
-      }
-    });
+    nextButton.addEventListener("click", nextSlide);
+    prevButton.addEventListener("click", prevSlide);
 
     if (auto) {
       slideInterval = setInterval(nextSlide, intervalTime);
     }
 
+    shuffleSlides();
   </script>
-
 </body>
-
 </html>
